refactor(MusicService): Stream 가독성을 위해 collect를 toList로 변경